# ai-search-match-framework

./: .env.example  .gitignore  .gitmessage  ASMF_UPDATE_NEEDED.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.webhook  PYPI_SETUP.md  QUICKSTART.md  README.md  README_FULL.md  docker-compose.example.yml  pr33_description.md  pyproject.toml  webhook_server.py
.github/: AI_INSTRUCTIONS.md  BRANCH_PROTECTION.md  CODEOWNERS  CODE_REVIEW_PATTERNS.md  LABELS.md  branch-protection.json  commit-conventions.md  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  downstream_request.md  feature_request.md
.github/hooks/: commit-msg
.github/workflows/: ai-pr-review.yml  ai-task-dispatcher.yml  auto-label.yml  auto-merge.yml  auto-revert-on-failure.yml  auto-tag.yml  autonomous-execution.yml  ci.yml  downstream-request.yml  publish.yml  release.yml  security.yml  stale.yml  visual-regression.yml
.github/workflows-reusable/: README.md  auto-tag.yml  dependabot-auto-merge.yml
config/: README.md  visual-test.example.yaml  visual-test.yaml
docs/: AI_DEVELOPMENT_WORKFLOW.md  BRANCH_PROTECTION.md  CONFIGURATION.md  DOWNSTREAM_WORKFLOW.md  MODEL_COMPARISON.md  OLLAMA_SETUP.md  PATTERNS.md  PR_SIZE_GUIDELINES.md  PUBLISHING.md  RELEASE_CHECKLIST.md  TODO.md  VISUAL_REGRESSION.md  WEBHOOK_SERVER.md
examples/: domain_config.yaml  model_selector_example.py  web_scraper_example.py
examples/job_finder/: README.md
examples/job_finder/aggregator/: aggregator.py
examples/job_finder/config/: config_manager.py
examples/job_finder/providers/: base_provider.py
examples/job_finder/tracker/: tracker.py
scripts/: README.md  apply-branch-protection.ps1  auto_revert_on_failure.py  gemini_pr_review.py  git-aliases.ps1  git-aliases.sh  ollama_pr_review.py  setup_ollama.py  take_pr_screenshots.py
src/: __init__.py
src/aggregator/: aggregator.py
src/ai/: llm_interface.py
src/asmf/: __init__.py
src/asmf/analyzers/: __init__.py  base_analyzer.py
src/asmf/domain/: __init__.py  config.py  expert.py
src/asmf/llm/: __init__.py  model_selector.py
src/asmf/parsers/: __init__.py  generic_pdf.py  pdf_parser.py
src/asmf/providers/: __init__.py  base_provider.py  gemini_provider.py  ollama_provider.py  provider_factory.py
src/asmf/utils/: __init__.py
src/config/: config_manager.py
src/providers/: base_provider.py
src/tracker/: tracker.py
tests/: test_domain_config.py  test_domain_expert.py  test_model_selector.py  test_pdf_parser.py  test_pdf_parser_no_claims.py  test_providers.py  test_screenshot_utils.py  test_webhook_server.py
tools/: __init__.py  screenshot_utils.py
