[project]
name = "ai-search-match-framework"
version = "0.2.0"
description = "Lightweight framework for AI-powered document analysis and search workflows with multi-provider support"
authors = [
    {name = "Vincent Caboara", email = "vcaboara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai", "llm", "analysis", "framework", "gemini", "ollama", "document-parsing", "patent-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.0.0",
    "anthropic>=0.21.0",
    "google-generativeai>=0.3.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pypdf>=3.17.0",
    "pdfplumber>=0.10.0",
    "httpx>=0.25.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

all = [
    "ai-search-match-framework[dev]",
]

[project.urls]
Homepage = "https://github.com/vcaboara/ai-search-match-framework"
Documentation = "https://github.com/vcaboara/ai-search-match-framework#readme"
Repository = "https://github.com/vcaboara/ai-search-match-framework"
Issues = "https://github.com/vcaboara/ai-search-match-framework/issues"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
addopts = [
    "--cov=src/asmf",
    "--cov=webhook_server",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=75",
]

[tool.coverage.run]
source = ["src/asmf", "."]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "setup.py",
    "scripts/*",
    "examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Enable additional rule sets for anti-pattern detection
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "C90",    # mccabe complexity
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear (catches many anti-patterns)
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "TRY",    # tryceratops (exception handling patterns)
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
]

# Rules that catch anti-patterns from CODE_REVIEW_PATTERNS.md:
# - B006: Mutable default arguments
# - B007: Unused loop variable
# - B015: Comparison to True/False
# - C408: Unnecessary dict() call
# - C409: Unnecessary list() call
# - PIE790: Unnecessary pass
# - PIE794: Duplicate class field definition
# - PIE807: Lambda with unnecessary return
# - RET505: Unnecessary else after return
# - RET506: Unnecessary else after raise
# - SIM102: Collapsible if
# - SIM103: Needless bool
# - SIM105: Use contextlib.suppress
# - SIM108: Use ternary operator
# - SIM114: Combine if branches
# - SIM118: Use key in dict
# - TRY002: Raise vanilla exception (use custom)
# - TRY003: Avoid long messages in exception
# - TRY201: Use raise without exception
# - TRY300: Consider else block
# - TRY301: Abstract raise to inner function
# - PLR0912: Too many branches
# - PLR0913: Too many arguments
# - PLR0915: Too many statements
# - PLR2004: Magic value comparison
# - S101: Use of assert (for non-test code)
# - S102: Use of exec
# - S103: Bad file permissions
# - S105-S107: Hardcoded passwords/tokens
# - S301: Use of pickle
# - S307: Use of eval
# - S608: SQL injection
# - RUF100: Unused noqa

ignore = [
    "E501",    # Line too long (handled by black)
    "TRY003",  # Allow long exception messages for clarity
    "PLR0913", # Allow more than 5 arguments (sometimes necessary for configs)
    "S101",    # Allow asserts in test files (handled by per-file-ignores)
]

# Complexity thresholds (from CODE_REVIEW_PATTERNS.md #6)
[tool.ruff.lint.mccabe]
max-complexity = 10  # Flag functions with complexity >10

[tool.ruff.lint.pylint]
max-branches = 12      # Flag functions with >12 branches
max-statements = 50    # Flag functions with >50 statements
max-nested-blocks = 3  # Flag nesting depth >3 (anti-pattern #6)

# Allow some rules in specific files
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow asserts in tests
    "ARG001",  # Allow unused arguments in test fixtures
    "PLR0913", # Allow many arguments in test functions
    "PLR2004", # Allow magic values in tests
]
"scripts/**/*.py" = [
    "T201",    # Allow print statements in scripts
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
